two lined names fix, text align center

--- a/assets/css/xs.css
+++ b/assets/css/xs.css
@@ -78,3 +78,11 @@ pre,textarea{overflow:auto}body,figure,html,ol,ul{margin:0}article,aside,details
 #menu > li:nth-child(2){
 	display: none;
 }
+
+.inline-container .btn, .inline-container .inline, .inline-container .inline-container {
+	text-align: center;
+}
+
+.product-lister .inline {
+	vertical-align: top;
+}
